# MAI_OS

LAB1/: CMakeLists.txt
LAB1/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
LAB1/src/: main.c  son.c
common/: sub.c  sub.h
